--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,7 @@ services:
       - "127.0.0.1:9001:9001"
     environment:
       MINIO_ROOT_USER: vansteve123
-      MINIO_ROOT_PASSWORD: Jul@#225501
+      MINIO_ROOT_PASSWORD: Jul@3225501
       MINIO_SERVER_URL: https://api.minio.dickyjoel.icu
       MINIO_BROWSER_REDIRECT_URL: https://minio.dickyjoel.icu
     volumes:
